backend/src/grammar_dsl/dsl/generated/GrammarDSLParser.py
# Generated from C:/GITHUB/Smart-Grammar-Checker-using-DSL-and-Rule-Based-Parsing/backend/src/grammar_dsl/dsl/grammar/GrammarDSL.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class GrammarDSLParser ( Parser ):

    grammarFileName = "GrammarDSL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'>='", "'<='", "'>'", "'<'", 
                     "'='", "'('", "')'", "'{'", "'}'", "','", "';'", "':'", 
                     "'.'", "'?'", "'!'" ]

    symbolicNames = [ "<INVALID>", "PRESENT", "PAST", "FUTURE", "SIMPLE", 
                      "CONTINUOUS", "PERFECT", "PERFECT_CONTINUOUS", "ACTIVE", 
                      "PASSIVE", "DECLARATIVE", "IMPERATIVE", "EXCLAMATORY", 
                      "CHECK", "GRAMMAR", "SHOW", "TOKENS", "GENERATE", 
                      "CREATE", "QUIZ", "SUBMIT", "ANSWERS", "WITH", "FOR", 
                      "AND", "OR", "SCORE", "EXERCISE", "EXERCISES", "RELATIVE_CLAUSE", 
                      "CONDITIONAL", "ARTICLE", "PREPOSITION", "AGREEMENT", 
                      "AFFIRMATIVE", "NEGATIVE", "INTERROGATIVE", "SVO", 
                      "SVC", "SVA", "SVOC", "SVOO", "SUBMITTED", "NOT_SUBMITTED", 
                      "PASSED", "FAILED", "REVISION", "PLAN", "HISTORY", 
                      "RESET", "VERB", "SPELL", "SYNONYM", "RESULTS", "STUDENT", 
                      "STUDENTS", "CLASS", "HELP", "GTE", "LTE", "GT", "LT", 
                      "EQUALS", "LEFT_PAREN", "RIGHT_PAREN", "LEFT_BRACE", 
                      "RIGHT_BRACE", "COMMA", "SEMICOLON", "COLON", "DOT", 
                      "QUESTION_MARK", "EXCLAMATION_MARK", "PERCENTAGE", 
                      "NUMBER", "WORD", "QUOTED_TEXT", "WS" ]

    RULE_command = 0
    RULE_grammarCheckCmd = 1
    RULE_generateExerciseCmd = 2
    RULE_quantitySpec = 3
    RULE_createQuizCmd = 4
    RULE_submitAnswersCmd = 5
    RULE_answerEntry = 6
    RULE_answerSeparator = 7
    RULE_answerValue = 8
    RULE_showStudentsCmd = 9
    RULE_showResultsCmd = 10
    RULE_showQuizCmd = 11
    RULE_showClassCmd = 12
    RULE_studentFilterExpr = 13
    RULE_studentFilterOrExpr = 14
    RULE_studentFilterAndExpr = 15
    RULE_studentFilterPrimary = 16
    RULE_comparisonExpr = 17
    RULE_statusExpr = 18
    RULE_revisionPlanCmd = 19
    RULE_historyCmd = 20
    RULE_resetHistoryCmd = 21
    RULE_spellCmd = 22
    RULE_verbCmd = 23
    RULE_synonymCmd = 24
    RULE_helpCmd = 25
    RULE_featureExpr = 26
    RULE_featureOrExpr = 27
    RULE_featureAndExpr = 28
    RULE_featurePrimary = 29
    RULE_featureAtom = 30
    RULE_tense = 31
    RULE_aspect = 32
    RULE_voice = 33
    RULE_sentenceType = 34
    RULE_clauseStructure = 35
    RULE_grammaticalFeature = 36
    RULE_paragraph = 37
    RULE_sentence = 38
    RULE_sentencePart = 39
    RULE_sentenceTerminator = 40

    ruleNames =  [ "command", "grammarCheckCmd", "generateExerciseCmd", 
                   "quantitySpec", "createQuizCmd", "submitAnswersCmd", 
                   "answerEntry", "answerSeparator", "answerValue", "showStudentsCmd", 
                   "showResultsCmd", "showQuizCmd", "showClassCmd", "studentFilterExpr", 
                   "studentFilterOrExpr", "studentFilterAndExpr", "studentFilterPrimary", 
                   "comparisonExpr", "statusExpr", "revisionPlanCmd", "historyCmd", 
                   "resetHistoryCmd", "spellCmd", "verbCmd", "synonymCmd", 
                   "helpCmd", "featureExpr", "featureOrExpr", "featureAndExpr", 
                   "featurePrimary", "featureAtom", "tense", "aspect", "voice", 
                   "sentenceType", "clauseStructure", "grammaticalFeature", 
                   "paragraph", "sentence", "sentencePart", "sentenceTerminator" ]

    EOF = Token.EOF
    PRESENT=1
    PAST=2
    FUTURE=3
    SIMPLE=4
    CONTINUOUS=5
    PERFECT=6
    PERFECT_CONTINUOUS=7
    ACTIVE=8
    PASSIVE=9
    DECLARATIVE=10
    IMPERATIVE=11
    EXCLAMATORY=12
    CHECK=13
    GRAMMAR=14
    SHOW=15
    TOKENS=16
    GENERATE=17
    CREATE=18
    QUIZ=19
    SUBMIT=20
    ANSWERS=21
    WITH=22
    FOR=23
    AND=24
    OR=25
    SCORE=26
    EXERCISE=27
    EXERCISES=28
    RELATIVE_CLAUSE=29
    CONDITIONAL=30
    ARTICLE=31
    PREPOSITION=32
    AGREEMENT=33
    AFFIRMATIVE=34
    NEGATIVE=35
    INTERROGATIVE=36
    SVO=37
    SVC=38
    SVA=39
    SVOC=40
    SVOO=41
    SUBMITTED=42
    NOT_SUBMITTED=43
    PASSED=44
    FAILED=45
    REVISION=46
    PLAN=47
    HISTORY=48
    RESET=49
    VERB=50
    SPELL=51
    SYNONYM=52
    RESULTS=53
    STUDENT=54
    STUDENTS=55
    CLASS=56
    HELP=57
    GTE=58
    LTE=59
    GT=60
    LT=61
    EQUALS=62
    LEFT_PAREN=63
    RIGHT_PAREN=64
    LEFT_BRACE=65
    RIGHT_BRACE=66
    COMMA=67
    SEMICOLON=68
    COLON=69
    DOT=70
    QUESTION_MARK=71
    EXCLAMATION_MARK=72
    PERCENTAGE=73
    NUMBER=74
    WORD=75
    QUOTED_TEXT=76
    WS=77

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def grammarCheckCmd(self):
            return self.getTypedRuleContext(GrammarDSLParser.GrammarCheckCmdContext,0)


        def EOF(self):
            return self.getToken(GrammarDSLParser.EOF, 0)

        def generateExerciseCmd(self):
            return self.getTypedRuleContext(GrammarDSLParser.GenerateExerciseCmdContext,0)


        def createQuizCmd(self):
            return self.getTypedRuleContext(GrammarDSLParser.CreateQuizCmdContext,0)


        def submitAnswersCmd(self):
            return self.getTypedRuleContext(GrammarDSLParser.SubmitAnswersCmdContext,0)


        def showResultsCmd(self):
            return self.getTypedRuleContext(GrammarDSLParser.ShowResultsCmdContext,0)


        def showClassCmd(self):
            return self.getTypedRuleContext(GrammarDSLParser.ShowClassCmdContext,0)


        def showStudentsCmd(self):
            return self.getTypedRuleContext(GrammarDSLParser.ShowStudentsCmdContext,0)


        def showQuizCmd(self):
            return self.getTypedRuleContext(GrammarDSLParser.ShowQuizCmdContext,0)


        def revisionPlanCmd(self):
            return self.getTypedRuleContext(GrammarDSLParser.RevisionPlanCmdContext,0)


        def historyCmd(self):
            return self.getTypedRuleContext(GrammarDSLParser.HistoryCmdContext,0)


        def resetHistoryCmd(self):
            return self.getTypedRuleContext(GrammarDSLParser.ResetHistoryCmdContext,0)


        def spellCmd(self):
            return self.getTypedRuleContext(GrammarDSLParser.SpellCmdContext,0)


        def verbCmd(self):
            return self.getTypedRuleContext(GrammarDSLParser.VerbCmdContext,0)


        def synonymCmd(self):
            return self.getTypedRuleContext(GrammarDSLParser.SynonymCmdContext,0)


        def helpCmd(self):
            return self.getTypedRuleContext(GrammarDSLParser.HelpCmdContext,0)


        def getRuleIndex(self):
            return GrammarDSLParser.RULE_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand" ):
                listener.enterCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand" ):
                listener.exitCommand(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommand" ):
                return visitor.visitCommand(self)
            else:
                return visitor.visitChildren(self)




    def command(self):

        localctx = GrammarDSLParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_command)
        try:
            self.state = 127
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self.grammarCheckCmd()
                self.state = 83
                self.match(GrammarDSLParser.EOF)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 85
                self.generateExerciseCmd()
                self.state = 86
                self.match(GrammarDSLParser.EOF)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 88
                self.createQuizCmd()
                self.state = 89
                self.match(GrammarDSLParser.EOF)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 91
                self.submitAnswersCmd()
                self.state = 92
                self.match(GrammarDSLParser.EOF)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 94
                self.showResultsCmd()
                self.state = 95
                self.match(GrammarDSLParser.EOF)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 97
                self.showClassCmd()
                self.state = 98
                self.match(GrammarDSLParser.EOF)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 100
                self.showStudentsCmd()
                self.state = 101
                self.match(GrammarDSLParser.EOF)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 103
                self.showQuizCmd()
                self.state = 104
                self.match(GrammarDSLParser.EOF)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 106
                self.revisionPlanCmd()
                self.state = 107
                self.match(GrammarDSLParser.EOF)
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 109
                self.historyCmd()
                self.state = 110
                self.match(GrammarDSLParser.EOF)
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 112
                self.resetHistoryCmd()
                self.state = 113
                self.match(GrammarDSLParser.EOF)
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 115
                self.spellCmd()
                self.state = 116
                self.match(GrammarDSLParser.EOF)
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 118
                self.verbCmd()
                self.state = 119
                self.match(GrammarDSLParser.EOF)
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 121
                self.synonymCmd()
                self.state = 122
                self.match(GrammarDSLParser.EOF)
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 124
                self.helpCmd()
                self.state = 125
                self.match(GrammarDSLParser.EOF)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GrammarCheckCmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CHECK(self):
            return self.getToken(GrammarDSLParser.CHECK, 0)

        def GRAMMAR(self):
            return self.getToken(GrammarDSLParser.GRAMMAR, 0)

        def paragraph(self):
            return self.getTypedRuleContext(GrammarDSLParser.ParagraphContext,0)


        def getRuleIndex(self):
            return GrammarDSLParser.RULE_grammarCheckCmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGrammarCheckCmd" ):
                listener.enterGrammarCheckCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGrammarCheckCmd" ):
                listener.exitGrammarCheckCmd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGrammarCheckCmd" ):
                return visitor.visitGrammarCheckCmd(self)
            else:
                return visitor.visitChildren(self)




    def grammarCheckCmd(self):

        localctx = GrammarDSLParser.GrammarCheckCmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_grammarCheckCmd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(GrammarDSLParser.CHECK)
            self.state = 130
            self.match(GrammarDSLParser.GRAMMAR)
            self.state = 131
            self.paragraph()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GenerateExerciseCmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GENERATE(self):
            return self.getToken(GrammarDSLParser.GENERATE, 0)

        def WITH(self):
            return self.getToken(GrammarDSLParser.WITH, 0)

        def featureExpr(self):
            return self.getTypedRuleContext(GrammarDSLParser.FeatureExprContext,0)


        def quantitySpec(self):
            return self.getTypedRuleContext(GrammarDSLParser.QuantitySpecContext,0)


        def getRuleIndex(self):
            return GrammarDSLParser.RULE_generateExerciseCmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGenerateExerciseCmd" ):
                listener.enterGenerateExerciseCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGenerateExerciseCmd" ):
                listener.exitGenerateExerciseCmd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGenerateExerciseCmd" ):
                return visitor.visitGenerateExerciseCmd(self)
            else:
                return visitor.visitChildren(self)




    def generateExerciseCmd(self):

        localctx = GrammarDSLParser.GenerateExerciseCmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_generateExerciseCmd)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(GrammarDSLParser.GENERATE)
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==27 or _la==74:
                self.state = 134
                self.quantitySpec()


            self.state = 137
            self.match(GrammarDSLParser.WITH)
            self.state = 138
            self.featureExpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QuantitySpecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.count = None # Token

        def EXERCISE(self):
            return self.getToken(GrammarDSLParser.EXERCISE, 0)

        def EXERCISES(self):
            return self.getToken(GrammarDSLParser.EXERCISES, 0)

        def NUMBER(self):
            return self.getToken(GrammarDSLParser.NUMBER, 0)

        def getRuleIndex(self):
            return GrammarDSLParser.RULE_quantitySpec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuantitySpec" ):
                listener.enterQuantitySpec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuantitySpec" ):
                listener.exitQuantitySpec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuantitySpec" ):
                return visitor.visitQuantitySpec(self)
            else:
                return visitor.visitChildren(self)




    def quantitySpec(self):

        localctx = GrammarDSLParser.QuantitySpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_quantitySpec)
        try:
            self.state = 143
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [27]:
                self.enterOuterAlt(localctx, 1)
                self.state = 140
                self.match(GrammarDSLParser.EXERCISE)
                pass
            elif token in [74]:
                self.enterOuterAlt(localctx, 2)
                self.state = 141
                localctx.count = self.match(GrammarDSLParser.NUMBER)
                self.state = 142
                self.match(GrammarDSLParser.EXERCISES)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CreateQuizCmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.title = None # Token
            self.count = None # Token

        def CREATE(self):
            return self.getToken(GrammarDSLParser.CREATE, 0)

        def QUIZ(self):
            return self.getToken(GrammarDSLParser.QUIZ, 0)

        def EXERCISES(self):
            return self.getToken(GrammarDSLParser.EXERCISES, 0)

        def WITH(self, i:int=None):
            if i is None:
                return self.getTokens(GrammarDSLParser.WITH)
            else:
                return self.getToken(GrammarDSLParser.WITH, i)

        def featureExpr(self):
            return self.getTypedRuleContext(GrammarDSLParser.FeatureExprContext,0)


        def QUOTED_TEXT(self):
            return self.getToken(GrammarDSLParser.QUOTED_TEXT, 0)

        def GENERATE(self):
            return self.getToken(GrammarDSLParser.GENERATE, 0)

        def NUMBER(self):
            return self.getToken(GrammarDSLParser.NUMBER, 0)

        def getRuleIndex(self):
            return GrammarDSLParser.RULE_createQuizCmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreateQuizCmd" ):
                listener.enterCreateQuizCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreateQuizCmd" ):
                listener.exitCreateQuizCmd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCreateQuizCmd" ):
                return visitor.visitCreateQuizCmd(self)
            else:
                return visitor.visitChildren(self)




    def createQuizCmd(self):

        localctx = GrammarDSLParser.CreateQuizCmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_createQuizCmd)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(GrammarDSLParser.CREATE)
            self.state = 146
            self.match(GrammarDSLParser.QUIZ)
            self.state = 147
            localctx.title = self.match(GrammarDSLParser.QUOTED_TEXT)
            self.state = 148
            _la = self._input.LA(1)
            if not(_la==17 or _la==22):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 149
            localctx.count = self.match(GrammarDSLParser.NUMBER)
            self.state = 150
            self.match(GrammarDSLParser.EXERCISES)
            self.state = 151
            self.match(GrammarDSLParser.WITH)
            self.state = 152
            self.featureExpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubmitAnswersCmdContext(ParserRuleContext):
        __slots__ = 'parser'
